  discount calculations (eg. Save: 15.3% for one decimal point)
- add new constants for different sale types
- add new setting 'calculationDecimals' to set the number of decimal digits
  used internally (default is 4) (Note: This is hardcoded in zen-cart 1.3.7)
- fix rounding bug in sales prices; this was a random rounding bug caused by
  tax applied too early in the calculation

Release 0.8.4
- make gv_send form secure
- add validation to gv_send form
- add another parameter to zm_format_currency to be able to format only
  without converting (sorry, needs updated to a few templates again...)
- added new custom rule to validate a given amount against the current
  account's voucher balance
- added ZMCurrency::parse(..) to allow for reasonable currency parsing.
- added zm_parse_money(..) to allow simple money parsing based on the sessions
  currency
- added ZMGVSendConfirmController to make GV handling simpler
- fix zm_htmlencode(..) for other languages (for example, Chinese); #1796776
- move getVoucherBalanceForId(..) from ZMAccounts to ZMCoupons
- reimplemented GV send as ZenMagick controller and services
- logout only guest users if isLogoffGuestAfterOrder is set to true; #1796979
- add gv_redeem code! #1796794
- update ZMThemeSupportPatch to disable zen-cart header.php processing except
  for checkout; #1778150 and performance
- fix incompatibility of zm_useo2 and core.php; #1798448
- fix ZMCoreCompressor for plugins that contain subdirectories; #1798440
- fix plugin filterResponse handling; #1799509
- add sort order config value to plugins
- make zones load according to the inital country for registration and address
  forms
- allow validation rules to fail without an error message (this can be useful
  if the rule needs to generate multiple messages using zm_messages directly)
- added dynamic state reloading to the demo store for create_account using
  jQuery
- fixed privacy statement in create_account
- re-added external.php (lost since 0.8.1)