@@ -49,6 +49,8 @@ Release 0.8.5
   used internally (default is 4) (Note: This is hardcoded in zen-cart 1.3.7)
 - fix rounding bug in sales prices; this was a random rounding bug caused by
   tax applied too early in the calculation
+- check for error/info messages in request (error_message/info_message) as
+  used by, for example, payment modules (why the heck??)
 
 Release 0.8.4
 - make gv_send form secure
